--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/backend
+  IMAGE_NAME: ${{ github.repository_owner }}/${{ github.event.repository.name }}/backend
 
 jobs:
   build-and-test:
@@ -46,8 +46,9 @@ jobs:
       - name: Build Docker image
         working-directory: ./backend
         run: |
-          docker build -t ${{ env.IMAGE_NAME }}:${{ github.sha }} .
-          docker tag ${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.IMAGE_NAME }}:latest
+          IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ${IMAGE_NAME_LOWER}:${{ github.sha }} .
+          docker tag ${IMAGE_NAME_LOWER}:${{ github.sha }} ${IMAGE_NAME_LOWER}:latest
 
   push-image:
     needs: build-and-test
@@ -71,18 +72,21 @@ jobs:
       - name: Build Docker image
         working-directory: ./backend
         run: |
-          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-          docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
+          docker build -t ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} .
+          docker tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            docker tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }} ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
+            docker tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main
           fi
 
       - name: Push Docker image
+        working-directory: ./backend
         run: |
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+          IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
+          docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}
+          docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:main
+            docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main
           fi
 
   deploy:
