--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,8 +47,9 @@ jobs:
         working-directory: ./backend
         run: |
           IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ${IMAGE_NAME_LOWER}:${{ github.sha }} .
-          docker tag ${IMAGE_NAME_LOWER}:${{ github.sha }} ${IMAGE_NAME_LOWER}:latest
+          echo "Building image: ${IMAGE_NAME_LOWER}:${{ github.sha }}"
+          docker build -t "${IMAGE_NAME_LOWER}:${{ github.sha }}" .
+          docker tag "${IMAGE_NAME_LOWER}:${{ github.sha }}" "${IMAGE_NAME_LOWER}:latest"
 
   push-image:
     needs: build-and-test
@@ -73,20 +74,21 @@ jobs:
         working-directory: ./backend
         run: |
           IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
-          docker build -t ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} .
-          docker tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
+          echo "Building image: ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}"
+          docker build -t "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}" .
+          docker tag "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}" "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest"
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            docker tag ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }} ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main
+            docker tag "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}" "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main"
           fi
 
       - name: Push Docker image
         working-directory: ./backend
         run: |
           IMAGE_NAME_LOWER=$(echo "${{ env.IMAGE_NAME }}" | tr '[:upper:]' '[:lower:]')
-          docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}
-          docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest
+          docker push "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:${{ github.sha }}"
+          docker push "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:latest"
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            docker push ${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main
+            docker push "${{ env.REGISTRY }}/${IMAGE_NAME_LOWER}:main"
           fi
 
   deploy:
